[package]
name = "bevy_mod_index"
version = "0.1.0"
description = "Allows using indexes to efficiently query for components by their values in the game engine Bevy."
keywords = [ "index", "indexes", "indices", "bevy", "bevyengine"]
categories = [ "game-davelopment", "data-structures" ]
homepage = "https://github.com/chrisjuchem/bevy_mod_index"
repository = "https://github.com/chrisjuchem/bevy_mod_index"
readme = "README.md"
license = "MIT"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[dependencies.bevy]
default_features = false
git = "https://github.com/bevyengine/bevy"
branch = "main"

# Dependencies for examples
[dev-dependencies]
rand = "0.8.5"

[dev-dependencies.bevy]
git = "https://github.com/bevyengine/bevy"
branch = "main"
features = ["dynamic_linking"]
