[package]
name = "bevy_mod_index"
version = "0.2.0"
description = "Allows using indexes to efficiently query for components by their values in the game engine Bevy."
keywords = [ "index", "indexes", "indices", "bevy", "bevyengine"]
categories = [ "game-development", "data-structures" ]
homepage = "https://github.com/chrisjuchem/bevy_mod_index"
repository = "https://github.com/chrisjuchem/bevy_mod_index"
readme = "README.md"
license = "MIT"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[dependencies.bevy]
version = "0.11"
default_features = false

# Dependencies for examples
[dev-dependencies]
rand = "0.8.5"

[dev-dependencies.bevy]
version = "0.11"
features = ["dynamic_linking"]
