[package]
name = "bevy_mod_index"
version = "0.4.1"
description = "Allows using indexes to efficiently query for components by their values in the game engine Bevy."
keywords = [ "index", "indexes", "indices", "bevy", "bevyengine"]
categories = [ "game-development", "data-structures" ]
homepage = "https://github.com/chrisjuchem/bevy_mod_index"
repository = "https://github.com/chrisjuchem/bevy_mod_index"
readme = "README.md"
license = "MIT"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[dependencies.bevy]
version = "0.14.0-rc.3"
default-features = false

# Dependencies for examples
[dev-dependencies]
rand = "0.8.5"

[dev-dependencies.bevy]
version = "0.14.0-rc.2"
features = ["dynamic_linking"]

[features]
reflect = []
